[metadata]
name = runas
author = Patrick Walentiny
author-email = patrick.walentiny@walentiny.com
summary = Tool for setting up an MFA session.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/pjwalen/runas
project_urls =
    Bug Tracker = https://github.com/pjwalen/runas/issues
    Documentation = https://github.com/pjwalen/runas/wiki
    Source Code = https://github.com/pjwalen/runas
license = LGPLv2+
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
scripts = 
    runas

[entry_points]
console_scripts =
    pbr = pbr.cmd:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
